--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <p>Hello</p>
     <div id="root"></div>
     <script src="../src/index.js" type="text/javascript"></script>
   </body>
